--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -23,3 +23,5 @@ spec:
           limits:
             cpu: "1000m"
             memory: "2Gi"
+      imagePullSecrets:
+      - name: gitlab-registry-secret
