--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,6 @@ gitlab-registry:
       --docker-username=image-registry \
       --docker-password=$CI_REGISTRY_TOKEN -n $NAMESPACE
 
-
 build:
   stage: build
   services: ["docker:dind"]
@@ -35,7 +34,7 @@ build:
     - docker build -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
 
-kubernetes:
+learnapp-deployment:
   stage: deploy
   script: 
     - cd deploy
@@ -45,3 +44,14 @@ kubernetes:
     - if: $CI_COMMIT_REF_SLUG == "master"
       changes:
         - deploy/*
+
+mysql-deployment: 
+  stage: deploy
+  script: 
+    - cd deploy 
+    - kubectl create secret generic learningapp-mysql-secret --from-literal=mysql-root-password=$MYSQL_ROOT_PASSWORD --namespace=$NAMESPACE --dry-run=client -o yaml | kubectl apply -f -
+    - kubectl apply -f mysql.yaml -n $NAMESPACE
+  rules:
+    - if: $CI_COMMIT_REF_SLUG == "master"
+      changes:
+        - deploy/mysql.yaml
