--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: learning-app-service
+  name: learningapp-service
 spec:
   selector:
-    app: learning-app
+    app: learningapp
   ports:
   - protocol: TCP
     port: 80
