--- a/deploy/phpmyadmin.yaml
+++ b/deploy/phpmyadmin.yaml
@@ -29,11 +29,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: phpmyadmin-service
-  namespace: stud-eedert-ba
 spec:
   selector:
     app: learningapp-phpmyadmin
   ports:
-    - port: 80
-      targetPort: 80
-  type: ClusterIP
+  - protocol: TCP
+    port: 80
+    targetPort: 80
