--- a/.env.example
+++ b/.env.example
@@ -2,25 +2,32 @@ APP_NAME=Circulo
 APP_ENV=local
 APP_KEY=base64:GBBktsEyXzeIbciwv6LyXrUQEGL5Onlh5NRa3RXSJ6I=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_TIMEZONE=Europe/Berlin
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
+APP_MAINTENANCE_DRIVER=file
+APP_MAINTENANCE_STORE=database
+
 BCRYPT_ROUNDS=12
 
 LOG_CHANNEL=stack
-LOG_STACK=single
+LOG_STACK=stderr
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=sail
+DB_DATABASE=dbcirculo
+DB_USERNAME=username
 DB_PASSWORD=password
+
+MYSQL_DATABASE=$DB_DATABASE
+MYSQL_USER=$DB_USERNAME
+MYSQL_PASSWORD=$DB_PASSWORD
+MYSQL_RANDOM_ROOT_PASSWORD=yes
 
 VITE_APP_NAME="${APP_NAME}"
