--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -18,6 +18,8 @@ services:
         environment:
             - APP_ENV=production
             - APP_DEBUG=false
+            - APP_URL="https://circulo.elisabeth-edert.de"
+            - ASSET_URL="https://circulo.elisabeth-edert.de"
         labels:
             - "traefik.enable=true"
             - "traefik.http.routers.whoami.rule=Host(`circulo.elisabeth-edert.de`)"
