--- a/.github/workflows/docker-publish-deploy.yml
+++ b/.github/workflows/docker-publish-deploy.yml
@@ -27,9 +27,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # tag with lowecase
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@8e5442c4ef9f78752691e2d8f8d19755c6f78e81
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.repository }}
+          tags: |
+            production
+
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           push: true
-          # env und reponame und :tagename
-          tags: ${{ env.REGISTRY }}/${{ github.repository }}:production
+          tags: ${{ steps.meta.outputs.tags }}
