--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -12,7 +12,7 @@ services:
         ports:
             - 3306:3306
     circuloapp:
-        image: ghcr.io/elisabethedert/eedert_abschlussarbeit_prototyp:sha-e1cfe80
+        image: ghcr.io/elisabethedert/eedert_abschlussarbeit_prototyp:production
         env_file:
             - .env
         environment:
