--- a/.github/workflows/docker-publish-deploy.yml
+++ b/.github/workflows/docker-publish-deploy.yml
@@ -89,13 +89,12 @@ jobs:
           echo "Host circulo" > ~/.ssh/config
           echo "    HostName ${{ secrets.DB_HOST }}" >> ~/.ssh/config
           echo "    Port 22" >> ~/.ssh/config
+          echo "    HostName ${{ secrets.DEPLOY_USERNAME }}" >> ~/.ssh/config
 
           echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_rsa
 
           echo "${{ secrets.DEPLOY_KNOWNHOSTS }}" > ~/.ssh/known_hosts
-          cat ~/.ssh/config
-          cat ~/.ssh/known_hosts
-          
+
       - name: deploy
         run: |
           docker -H ssh://circulo compose -f docker-compose.prod.yaml pull
